# EvaluationParametervonMerkmalsdeskriptorenlokalenKlassifikatorAdaptiveConstrainedPolynomialTrees

./: CMakeLists.txt  Makefile  README.md  cmake_install.cmake
config/: configEvaluation.ini  configEvaluationLocal.ini  configTracking.ini  configTraining.ini  configTrainingLocal.ini  logger.cfg
src/: main.cpp  mainCuda.cpp  main_evaluation.cpp  main_evaluation_local.cpp  main_training.cpp
src/cudaUtils/: helper.cpp  polyAnswerImage.cu  utils.h
src/model/: CmdInputMapping.h  GlobalConstants.h  Types.h
src/model/dataHandlers/: DaimlerDataHandler.cpp  DaimlerDataHandler.h  DatasetHandler.cpp  DatasetHandler.h
src/model/detectors/: Detector.h  ViolaLienhartDetector.cpp  ViolaLienhartDetector.h
src/model/evaluation/: Evaluator.cpp  Evaluator.h  LocalEvaluator.cpp  LocalEvaluator.h  TotalEvaluator.cpp  TotalEvaluator.h
src/model/global/: GlobalTree.cpp  GlobalTree.h  TreeBoostImplementation.h
src/model/local/: Gauss.cpp  Gauss.h  GlobalDefinitions.h  LocalPolynoms.cpp  LocalPolynoms.cpp.autosave  LocalPolynoms.h  ModifiedPCA.cpp  ModifiedPCA.h  PatchFeature.cpp  PatchFeature.h  PatchFeatureUtils.cpp  PatchFeatureUtils.h  Polynom.cpp  Polynom.h
src/model/trackers/: CPT.cpp  CPT.h
src/model/trainers/: Trainer.cpp  Trainer.h
src/view/: UI.cpp  UI.h  mainwindow.cpp
